<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.1</version>
		<relativePath/>
	</parent>

	<groupId>fr.osallek</groupId>
	<artifactId>eu4-save-editor</artifactId>
	<version>1.2.0</version>
	<name>Eu4SaveEditor</name>
	<description>Eu4SaveEditor</description>

	<properties>
		<java.version>17</java.version>

		<eu4-parser.version>1.1.7</eu4-parser.version>
		<javafx.version>19</javafx.version>
		<controlsfx.version>11.1.2</controlsfx.version>
		<maven-artifact.version>3.8.6</maven-artifact.version>
		<bootstrapfx-core.version>0.4.0</bootstrapfx-core.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>fr.osallek</groupId>
			<artifactId>eu4-parser</artifactId>
			<version>${eu4-parser.version}</version>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${javafx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.controlsfx</groupId>
			<artifactId>controlsfx</artifactId>
			<version>${controlsfx.version}</version>
		</dependency>
		<dependency>
			<groupId>org.kordamp.bootstrapfx</groupId>
			<artifactId>bootstrapfx-core</artifactId>
			<version>${bootstrapfx-core.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-artifact</artifactId>
			<version>${maven-artifact.version}</version>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
    </plugins>
	</build>
</project>
